Added routes for the directory, search directory, and the about page, as well as some functionality for those pages

--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -1,1 +1,12 @@
 {% extends '_layout.html' %}
+{% block body %}
+
+<h1>What is Course Elector?</h1>
+<hr>
+<p> CourseElector is an online web service made by UNCC students, for UNCC students. It provides students with the tools they need to connect with and leave feedback on their courses, as well as view detailed information about their classes contributed by their peers.</p>
+
+
+
+
+
+{% endblock %}
