--- a/templates/course_directory.html
+++ b/templates/course_directory.html
@@ -1,1 +1,11 @@
 {% extends '_layout.html' %}
+{% block body %}
+
+<h1>Course Directory</h1>
+<p> Tempory text: Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+<p>{{major_choice}}</p>
+
+
+
+
+{% endblock %}
