--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/homepage.css') }}">
 </head>
 <body>
@@ -14,7 +15,7 @@
             <li><a href="#">Course Directory</a></li>
             <li><a href="#">Submit Rating</a></li>
             <li><a href="#">About</a></li>
-            <li><a class="right" href="#">Log In</a></li>
+            <li><a class="right" href="{{ url_for('login_signup') }}">Log In</a></li>
             <li><a class="right" href="#">Sign Up</a></li>
         </ul>
     </nav>
