--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link  rel="styleshet" href="{{ url_for('static', filename='css/profile.css') }}" alt="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet">
     <title> User Profile</title>
 </head>
 <body>
