--- a/templates/create_forum_post.html
+++ b/templates/create_forum_post.html
@@ -1,1 +1,17 @@
 {% extends '_layout.html' %}
+
+{% block body %}
+    <h1>Create Post</h1>
+    <form method="post">
+        <div class="form-group">
+            <label for="title">Title</label>
+            <input type="text" id="title" name="title" class="form-control" required>
+        </div>
+        <div class="form-group">
+            <label for="content">Content</label>
+            <textarea id="content" name="content" class="form-control" rows="4" required></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+    <a href="{{ url_for('view_forum_posts') }}" class="btn btn-secondary mt-2">Back to Forum Home</a>
+{% endblock %}
