--- a/templates/view_single_forum_post.html
+++ b/templates/view_single_forum_post.html
@@ -1,1 +1,30 @@
 {% extends '_layout.html' %}
+
+{% block body %}
+    <h1>{{ post.title }}</h1>
+    <p>{{ post.content }}</p>
+    <a href="{{ url_for('edit_forum_post', post_id=post_id) }}" class="btn btn-primary">Edit Post</a>
+    <hr>
+    <h2>Comments</h2>
+    <ul class="list-group">
+        {% for comment in comments %}
+            <li class="list-group-item">
+                {{ comment }}
+                <form method="post" action="{{ url_for('delete_comment', post_id=post_id, comment_id=loop.index0) }}">
+                    <button type="submit" class="btn btn-danger btn-sm float-right">Delete</button>
+                </form>
+                <a href="{{ url_for('edit_forum_comment', post_id=post_id, comment_id=loop.index0) }}" class="btn btn-primary btn-sm float-right mr-2">Edit</a>
+            </li>
+        {% endfor %}
+
+    </ul>
+    <form method="post">
+        <div class="form-group mt-3">
+            <label for="comment">Add a Comment</label>
+            <textarea id="comment" name="comment" class="form-control" rows="3" required></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary mt-2">Submit Comment</button>
+    </form>
+    <a href="{{ url_for('view_forum_posts') }}" class="btn btn-secondary mt-2">Back to Forum Home</a>
+</div>
+{% endblock %}
