--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -3,9 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>{% block title %}{% endblock %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
-<body>
-    
+<body class="d-flex flex-column h-100">
+    <nav class="navbar navbar-expand-lg bg-success" data-bs-theme="dark">
+        <div class="container-fluid">
+        <a class="navbar-brand" href="/">Home</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" href="/index.html" aria-current="page">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/view_forum_posts.html">Forum</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/course_directory_search.html">Course Directory</a>
+                </li>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/submit_rating.html">Submit Rating</a>
+                </li>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/about_us.html">About</a>
+                </li>
+            </ul>
+        </div>
+        </div>
+    </nav>
+    <div class="container pt-4">
+        {% block body %}{% endblock %}
+    </div>
+    <footer class="fixed-bottom py-1 bg-success">
+        <div class="container">
+        <span class="text-light d-flex justify-content-center">© 2023</span>
+        </div>
+    </footer>
 </body>
 </html>
