--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <title>{% block title %}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
+<body>
+
 <body class="d-flex flex-column h-100">
     <nav class="navbar navbar-expand-lg bg-success" data-bs-theme="dark">
         <div class="container-fluid">
@@ -16,21 +17,21 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" href="/index.html" aria-current="page">Home</a>
+                    <a class="nav-link active" href="/" aria-current="page">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/view_forum_posts.html">Forum</a>
+                    <a class="nav-link" href="/">Forum</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/course_directory_search.html">Course Directory</a>
-                </li>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/submit_rating.html">Submit Rating</a>
+                    <a class="nav-link" href="/search">Course Directory</a>
                 </li>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/about_us.html">About</a>
+                    <a class="nav-link" href="/">Submit Rating</a>
+                </li>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/">About</a>
                 </li>
             </ul>
         </div>
