--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -34,6 +34,14 @@
                     <a class="nav-link" href="/">About</a>
                 </li>
             </ul>
+            <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="login_signup">Log In</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="login_signup">Sign Up</a>
+                </li>
+            </ul>
         </div>
         </div>
     </nav>
