Fixed UI on course_directory_search and added stylesheets

--- a/templates/course_directory_search.html
+++ b/templates/course_directory_search.html
@@ -2,12 +2,14 @@
 {% block body %}
 
 <h1>Course Directory Search</h1>
-<h2>Choose one or more search criteria:</h2>
+<p class="second-title">Choose one or more search criteria:</h2>
 
-<form action="/search" method="post" class="mt-4">
-    <div class="mb-3">
+
+
+<form action="/search" method="post" class="mt-4 form-adjuster">
+    <div class="mb-3 indiv-selector">
     <label for="major">Course Major</label>
-    <select name="major" id="major" class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+    <select name="major" id="major" class="form-select form-select-lg mb-3 select-border" aria-label=".form-select-lg example">
         <option selected value="">Please select your major</option>
         <option value="CompSci">Computer Science</option>
         <option value="English">English</option>
@@ -15,9 +17,9 @@
     </select>
     </div>
     
-    <div class="mb-3">
+    <div class="mb-3 indiv-selector">
     <label for="quality">Sort By Class Quality Rating</label>
-    <select name="quality" id="quality" class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+    <select name="quality" id="quality" class="form-select form-select-lg mb-3 select-border" aria-label=".form-select-lg example">
         <option selected value="">Please choose a class quality based upon our 5 star user-submitted system</option>
         <option value="Quality1Plus">One Star or Higher</option>
         <option value="Quality2Plus">Two Stars or Higher</option>
@@ -27,9 +29,9 @@
     </select>
     </div>
 
-    <div class="mb-3">
+    <div class="mb-3 indiv-selector">
         <label for="difficulty">Sort By Class Difficulty Rating</label>
-        <select name="difficulty" id="difficulty" class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+        <select name="difficulty" id="difficulty" class="form-select form-select-lg mb-3 select-border" aria-label=".form-select-lg example">
             <option selected value="">Please choose a class difficulty based upon our 5 star user-submitted system</option>
             <option value="Diff1Plus">One Star or Higher</option>
             <option value="Diff2Plus">Two Stars or Higher</option>
@@ -39,16 +41,19 @@
         </select>
         </div>
 
-    <div class="mb-3"> 
+    <div class="mb-3 indiv-selector"> 
     <label for="instructorID" class="form-label">Sort By Instructor ID:</label>
-    <input type="number" name="instructorID" id="instructorID" class="form-control">
+    <input type="number" name="instructorID" id="instructorID" class="form-control select-border" step="1">
     </div>
-
-    <button type="submit" class="btn btn-primary">Submit</button>
+    
+    <div class="button-container">
+    <button type="submit" class="btn btn-primary button-adjuster">Submit</button>
+    </div>
 </form>
 
-<img src="/static/search-background.jpg" class="img-fluid" alt="Responsive image">
-
+<div class="image-adjuster">
+<img src="/static/images/search-background.jpg" class="img-fluid" alt="Responsive image">
+</div>
 
 
 {% endblock %}
