Finished UI for course_directory_search, course_directory, about_us pages.

--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -1,14 +1,15 @@
 {% extends '_layout.html' %}
+{% block title %}About Us{% endblock %}
 {% block body %}
 
 <div>
-<h1>What is Course Elector?</h1>
-
+<h1 class="about-header">What is Course Elector?</h1>
 </div>
-<hr>
+<hr class="about-hr">
 
-<p> CourseElector is an online web service made by UNCC students, for UNCC students. It provides students with the tools they need to connect with and leave feedback on their courses, as well as view detailed information about their classes contributed by their peers.</p>
-
+<div>
+<p class="about-paragraph"> CourseElector is an online web service made by UNCC students, for UNCC students. It provides students with the tools they need to connect with and leave feedback on their courses, as well as view detailed information about their classes contributed by their peers.</p>
+</div>
 
 
 
