--- a/static/css/course_directory_search.css
+++ b/static/css/course_directory_search.css
@@ -1,7 +1,7 @@
 .image-adjuster {
     position:absolute;
     right: 2%;
-    top: 21%;
+    top: 25.2%;
     width: 50%;
     max-width: 100%;
     height: auto;
@@ -9,14 +9,14 @@
 }
 
 .form-adjuster {
-    padding-top: 120px;
-    margin-top: 40px;
+    padding-top: 5%;
+    margin-top: 10%;
     width: 700px;
-    margin-left: 80px;
+    margin-left: -10%;
     
 }
 
-label {
+.label-adjuster {
     color: #005035;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
@@ -29,12 +29,12 @@ label {
     color: #005035;
 }
 
-h1 {
+.h1-adjuster {
     color: #005035;
     position: absolute;
     left: 50%;
     transform: translate(-50%, -50%);
-    margin-top: 35px;
+    margin-top: 22px;
 }
 
 .second-title {
@@ -42,7 +42,7 @@ h1 {
     position: absolute;
     left: 50%;
     transform: translate(-50%, -50%);
-    margin-top: 85px;
+    margin-top: 72px;
     font-size:24px;
 }
 
