--- a/templates/course_directory_search.html
+++ b/templates/course_directory_search.html
@@ -1,14 +1,16 @@
 {% extends '_layout.html' %}
+{% block title %}Course Directory Search{% endblock %}
+
 {% block body %}
 
-<h1>Course Directory Search</h1>
+<h1 class="h1-adjuster">Course Directory Search</h1>
 <p class="second-title">Choose one or more search criteria:</h2>
 
 
 
 <form action="/search" method="post" class="mt-4 form-adjuster">
     <div class="mb-3 indiv-selector">
-    <label for="major">Course Major</label>
+    <label for="major" class="label-adjuster">Course Major</label>
     <select name="major" id="major" class="form-select form-select-lg mb-3 select-border" aria-label=".form-select-lg example">
         <option selected value="">Please select your major</option>
         <option value="CompSci">Computer Science</option>
@@ -18,7 +20,7 @@
     </div>
     
     <div class="mb-3 indiv-selector">
-    <label for="quality">Sort By Class Quality Rating</label>
+    <label for="quality" class="label-adjuster">Sort By Class Quality Rating</label>
     <select name="quality" id="quality" class="form-select form-select-lg mb-3 select-border" aria-label=".form-select-lg example">
         <option selected value="">Please choose a class quality based upon our 5 star user-submitted system</option>
         <option value="Quality1Plus">One Star or Higher</option>
@@ -30,7 +32,7 @@
     </div>
 
     <div class="mb-3 indiv-selector">
-        <label for="difficulty">Sort By Class Difficulty Rating</label>
+        <label for="difficulty" class="label-adjuster">Sort By Class Difficulty Rating</label>
         <select name="difficulty" id="difficulty" class="form-select form-select-lg mb-3 select-border" aria-label=".form-select-lg example">
             <option selected value="">Please choose a class difficulty based upon our 5 star user-submitted system</option>
             <option value="Diff1Plus">One Star or Higher</option>
@@ -42,7 +44,7 @@
         </div>
 
     <div class="mb-3 indiv-selector"> 
-    <label for="instructorID" class="form-label">Sort By Instructor ID:</label>
+    <label for="instructorID" class="form-label label-adjuster">Sort By Instructor ID:</label>
     <input type="number" name="instructorID" id="instructorID" class="form-control select-border" step="1">
     </div>
     
