--- a/static/css/course_directory_search.css
+++ b/static/css/course_directory_search.css
@@ -1,4 +1,4 @@
-.image-adjuster {
+.search-directory-image-adjuster {
     position:absolute;
     right: 2%;
     top: 25.2%;
@@ -8,7 +8,7 @@
     
 }
 
-.form-adjuster {
+.search-directory-form-adjuster {
     padding-top: 5%;
     margin-top: 10%;
     width: 700px;
@@ -16,7 +16,7 @@
     
 }
 
-.label-adjuster {
+.search-directory-label-adjuster {
     color: #005035;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
@@ -24,12 +24,12 @@
     padding-bottom: 20px;
 }
 
-.indiv-selector {
+.search-directory-indiv-selector {
     padding-bottom: 10px;
     color: #005035;
 }
 
-.h1-adjuster {
+.search-directory-h1-adjuster {
     color: #005035;
     position: absolute;
     left: 50%;
@@ -37,7 +37,7 @@
     margin-top: 22px;
 }
 
-.second-title {
+.search-directory-second-title {
     color: #86A873;
     position: absolute;
     left: 50%;
@@ -46,13 +46,13 @@
     font-size:24px;
 }
 
-.button-container {
+.search-directory-button-container {
     position: absolute;
     left: 50%;
     transform: translate(-50%, -50%);
     margin-top: 20px;
 }
-.button-adjuster {
+.search-directory-button-adjuster {
     width: 200px;
     background-color: #005035;
     color: #FFFFFF;
@@ -61,7 +61,7 @@
     font-weight:600;
 }
 
-.select-border {
+.search-directory-select-border {
     border: 2px solid #005035;
     color: #005035;
     font-size: large;
