--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -7,22 +7,27 @@
 *{
     margin: 0;
     padding: 0;
-    list-style: none;
-    text-decoration: none;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, sans-serif;
+    text-decoration: none;
+    list-style: none;
 }
 
 body{
-    background: white;
-    background-color: black;
+    background-color: black; 
+}
+
+h2{
+    color: white;
+    text-align: left;
+    padding: 30px 0px 0px 40px;
 }
 
 .header{
-    display:flex;
+    display: flex;
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: #f1f1f1;
 }
 
@@ -31,16 +36,17 @@ body{
     width: 200px;
     height: 100%;
     background: #005035;
+    padding: 0px 0px;
 }
 
-/* .side-nav{
+.side-nav{
     width: 250px;
     height: 100%;
     background-color: var(--dark-green);
     position: fixed;
     top: 0;
     left: 0;
-    padding: 20px 30px;
+    padding: 10px 30px;
 }
 
 .nav-links{
@@ -55,34 +61,67 @@ body{
 .nav-links li a{
     color: white;
     text-decoration: none;
-    padding: 10px 14px;
-} */
+    padding: 8px 10px;
+    display: flex;
+    align-items: center;
+} 
 
+.nav-links li a i{
+    font-size: 20px;
+    margin-right: 20px;
+} 
 
-/* ul{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 25%;
-    background-color: #f1f1f1;
-    position: fixed;
-    height: 100%;
-    overflow: auto;
+hr{
+    border-color: var(--light-green);
 }
 
-li a{
-    display: block;
-    color: #000;
-    padding: 8px 16px;
-    text-decoration: none;
+.active{
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    height: 47px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    border-radius: 6px;
+    box-shadow: 0 5px 10px rgb(255,255,255,0.4);
+    display: none;
 }
 
-li a.active {
-    background-color: #04AA6D;
-    color: white;
+.nav-links li:hover a{
+    color: var(--light-green);
+    transition: 0.3s;
 }
-  
-li a:hover:not(.active) {
-    background-color: #555;
-    color: white;
-} */
+
+/*Profile information*/
+.header .main_content{
+    width: 100%;
+    margin-left: 300px;
+}
+
+.header .main_content .profile-container{
+    margin-top: 50px;
+    width: 80%;
+    background: #70798c;
+    color: black;
+    border-bottom: 1px solid black;
+}
+
+.profile-form{
+    width: 80%;
+    padding-top: 60px;
+    padding-bottom: 50px;
+}
+
+.icon{
+    height: 150px;
+}
+
+@media only screen and (max-width:600px){
+    .side-nav{
+        width: 110px;
+    }
+    .nav-links{
+        display: none;
+    }
+}
