--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
             <li><a href="#">About</a></li>
             <li><a class="right" href="{{ url_for('login_signup') }}">Log In</a></li>
             <li><a class="right" href="#">Sign Up</a></li>
+            <li><a href="{{ url_for('userprofile') }}">Profile</a></li>
         </ul>
     </nav>
 
