--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -3,23 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  rel="styleshet" href="{{ url_for('static', filename='css/profile.css') }}" alt="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet">
     <title> User Profile</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/profile.css') }}">
 </head>
 <body>
     <div class="header">
         <div class="side-nav">
             <h2>Profile</h2>
             <ul class="nav-links">
-                <li><a href="#">Dashboard</a></li>
-                <li><a href="#">Settings</a></li>
-                <li><a href="#">Notifications</a></li>
-                <li><a href="#">Privacy</a></li>
-                <li><a href="#">Help</a></li>
-                <li><a href="#">Language</a></li>
+                <li><a href="#"><i class="fa-brands fa-microsoft" style="color: #ffffff;"></i>Dashboard</a></li>
+                <li><a href="#"><i class="fa-solid fa-gear" style="color: #ffffff;"></i>Settings</a></li>
+                <li><a href="#"><i class="fa-solid fa-bell" style="color: #ffffff;"></i>Notifications</a></li>
+                <li><a href="#"><i class="fa-solid fa-user-lock" style="color: #ffffff;"></i>Privacy</a></li>
+                <hr>
+                <li><a href="#"><i class="fa-solid fa-circle-question" style="color: #ffffff;"></i>Help</a></li>
+                <li><a href="#"><i class="fa-solid fa-globe" style="color: #ffffff;"></i>Language</a></li>
+                <div class="active"></div>
             </ul>
         </div>
+
+        <div class="main_content">
+            <div class="profile-container">
+                <img src="{{ url_for('static', filename='images/icon.png') }}" class="icon"alt="Profile Icon">
+                <h2>Demo Emma</h2>
+                <p>Email: demoemma@gmail.com
+            </div>
+
+            <div class="profile-form">
+                <form class="row g-3">
+                    <div class="col-md-6">
+                      <label for="inputEmail4" class="form-label">Email</label>
+                      <input type="email" class="form-control" id="inputEmail4">
+                    </div>
+                    <div class="col-md-6">
+                      <label for="inputPassword4" class="form-label">Password</label>
+                      <input type="password" class="form-control" id="inputPassword4">
+                    </div>
+                    <div class="col-12">
+                      <label for="inputAddress" class="form-label">Address</label>
+                      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                    </div>
+                    <div class="col-12">
+                      <label for="inputAddress2" class="form-label">Address 2</label>
+                      <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+                    </div>
+                    <div class="col-md-6">
+                      <label for="inputCity" class="form-label">City</label>
+                      <input type="text" class="form-control" id="inputCity">
+                    </div>
+                    <div class="col-md-4">
+                      <label for="inputState" class="form-label">State</label>
+                      <select id="inputState" class="form-select">
+                        <option selected>Choose...</option>
+                        <option>...</option>
+                      </select>
+                    </div>
+                    <div class="col-md-2">
+                      <label for="inputZip" class="form-label">Zip</label>
+                      <input type="text" class="form-control" id="inputZip">
+                    </div>
+                    <div class="col-12">
+                      <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="gridCheck">
+                        <label class="form-check-label" for="gridCheck">
+                          Check me out
+                        </label>
+                      </div>
+                    </div>
+                    <div class="col-12">
+                      <button type="submit" class="btn btn-primary">Sign in</button>
+                    </div>
+                </form>
+                
+            </div>
+        </div>   
     </div>
         
     <footer>
@@ -27,3 +86,4 @@
     </footer>
 </body>
 </html>
+
