added pagination button to course directory UI, may adjust or remove later

--- a/static/css/course_directory.css
+++ b/static/css/course_directory.css
@@ -40,3 +40,12 @@
     cursor: pointer;
     font-weight:600;
 }
+
+.pagination-container {
+    position: absolute;
+    right: 45%;
+    bottom: 6%;
+}
+.pagination-container a {
+    color: #005035;
+}
