--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,3 +1,7 @@
+{% extends '_layout.html' %}
+
+{% block body %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,3 +24,5 @@
     </footer>
 </body>
 </html>
+
+{% endblock %}
