--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -1,19 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/forum_style.css') }}">
-    <title>Document</title>
+    {% block styles %}{% endblock %}
 </head>
+
 <body>
-    <div class = "container">
-        {% block body %}
-        {% endblock %}
-    </div>
-    
+    <nav class="navbar navbar-expand-lg bg-success" data-bs-theme="dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link{% if forum_active %} active{% endif %}" href="/view_forum_posts">Forum</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link{% if course_active %} active{% endif %}" href="/search">Course
+                            Directory</a>
+                    </li>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link{% if rating_active %} active{% endif %}" href="/submit_rating">Submit
+                            Rating</a>
+                    </li>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link{% if about_active %} active{% endif %}" href="/about">About</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link{% if login_active %} active{% endif %}" href="/login_signup">Log
+                            In/Sign up</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    {% block body %}{% endblock %}
+    <footer class="fixed-bottom py-1 bg-success">
+        <div class="container">
+            <span class="text-light d-flex justify-content-center">© 2023</span>
+        </div>
+    </footer>
 </body>
+
 </html>
