--- a/templates/edit_forum_post.html
+++ b/templates/edit_forum_post.html
@@ -1,6 +1,7 @@
 {% extends '_layout.html' %}
 
 {% block body %}
+<div class="container pt-4">
     <h1>Edit Post</h1>
     <form method="post">
         <div class="form-group">
