--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -4,9 +4,10 @@
     <title>{% block title %}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     {% block styles %}{% endblock %}
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg bg-success" data-bs-theme="dark">
+<body class="mb-5">
+    <nav class="sticky-top navbar navbar-expand-lg bg-success" data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">Home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -43,7 +44,7 @@
         </div>
     </nav>
     {% block body %}{% endblock %}
-    <footer class="fixed-bottom py-1 bg-success">
+    <footer class="fixed-bottom py-1 mt-3 bg-success">
         <div class="container">
             <span class="text-light d-flex justify-content-center">© 2023</span>
         </div>
