--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -44,7 +44,7 @@
         </div>
     </nav>
     {% block body %}{% endblock %}
-    <footer class="fixed-bottom py-1 mt-3 bg-success">
+    <footer class="fixed-bottom py-1 bg-success">
         <div class="container">
             <span class="text-light d-flex justify-content-center">© 2023</span>
         </div>
