finished UI for view rating page

--- a/templates/submit_rating.html
+++ b/templates/submit_rating.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block body %}
-<h1 class="text-center">Submit a Rating</h1>
+<h1>Submit a Rating</h1>
 <div class="flex-container">
     <div class="form-container">
         <form id="rating-form" action="/submit_rating" method="post">
