added team name to footer

--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -53,7 +53,7 @@
     {% block body %}{% endblock %}
     <footer class="fixed-bottom py-1 bg-success">
         <div class="container">
-            <span class="text-light d-flex justify-content-center">© 2023</span>
+            <span class="text-light d-flex justify-content-center">Elmo Worshippers © 2023</span>
         </div>
     </footer>
 </body>
