added some margin between elements to make them look better when smooshed together

--- a/static/css/submit_rating.css
+++ b/static/css/submit_rating.css
@@ -34,6 +34,10 @@ label {
     justify-content: space-around;
 }
 
+.flex-container > div {
+    margin: 0 16px;
+}
+
 td {
     padding: 0.5rem 0;
 }
