--- a/templates/view_ratings.html
+++ b/templates/view_ratings.html
@@ -8,8 +8,10 @@
 
 {% block body %}
 <h1 class="text-center">ITSC-3155 - Software Engineering</h1>
-<div class="course-info">
-    <div class="course-info-title">
+<div class="course-info-container">
+
+    <div class="course-info">
+        <div class="course-info-title">
         <h2 class="m-0">Computing and Informatics</h2>
     </div>
 
@@ -31,6 +33,7 @@
             <p>X/5</p>
         </div>
     </div>
+</div>
 </div>
 
 <div class="ratings-container">
