--- a/static/css/view_ratings.css
+++ b/static/css/view_ratings.css
@@ -26,9 +26,14 @@ h1 {
     border-radius: 1.5rem;
     max-width: 1000px;
     flex-grow: 1;
-    margin: 0 auto;
+    margin: 0 32px;
     justify-content: space-between;
     padding: 15px 25px;
+}
+
+.course-info-container {
+    display: flex;
+    justify-content: center;
 }
 
 .course-info-title {
