--- a/static/css/course_directory.css
+++ b/static/css/course_directory.css
@@ -1,13 +1,22 @@
 .directory-header {
     color: #005035;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin-top: 30px;
+    text-align: center;
+padding-bottom: 5px;
+
+}
+
+section {
+    padding-left: 50px;
+    padding-right: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
 }
 
 .directory-table {
-    margin-top: 74px;
+    margin-top: 0px;
 
 
 }
@@ -19,18 +28,16 @@
 }
 
 .directory-form-adjuster {
-    padding-top: 5%;
-    margin-top: 10%;
+    padding-top: 0%;
     width: 700px;
-    margin-left: -10%;
+    margin-left: 40%;
+    display: flex;
+    justify-content: flex-end;
     
 }
 
 .directory-button-container {
-    position: absolute;
-    left: 82%;
-    transform: translate(-50%, -50%);
-    margin-top: -1%;
+    margin-left: auto;
 }
 .directory-button-adjuster {
     width: 200px;
@@ -42,9 +49,7 @@
 }
 
 .pagination-container {
-    position: absolute;
-    right: 45%;
-    bottom: 6%;
+    margin-top: -56px;
 }
 .pagination-container a {
     color: #005035;
