adding course directory search logic and changing instructor form to credit hour form

--- a/templates/course_directory_search.html
+++ b/templates/course_directory_search.html
@@ -16,7 +16,7 @@
     <label for="major" class="search-directory-label-adjuster">Course Major</label>
     <select name="major" id="major" class="form-select form-select-lg mb-3 search-directory-select-border" aria-label=".form-select-lg example">
         <option selected value="">Please select your major</option>
-        <option value="CompSci">Computer Science</option>
+        <option value="Computer Science">Computer Science</option>
         <option value="English">English</option>
         <option value="Biology">Biology</option>
     </select>
@@ -45,10 +45,10 @@
             <option value="Diff5Only">Five Star Quality Only</option>
         </select>
         </div>
-
+    
     <div class="mb-3 search-directory-indiv-selector"> 
-    <label for="instructorID" class="form-label search-directory-label-adjuster">Sort By Instructor ID:</label>
-    <input type="number" name="instructorID" id="instructorID" class="form-control search-directory-select-border" step="1">
+    <label for="credit" class="form-label search-directory-label-adjuster">Sort By Credit Hours:</label>
+    <input type="number" name="credit" id="credit" class="form-control search-directory-select-border" title="Please enter a value from 0 to 4" placeholder="Enter a number between 0 and 4" max="4" min="0" step="1">
     </div>
     
     <div class="search-directory-button-container">
