added a few more options for majors on the course search page

--- a/templates/course_directory_search.html
+++ b/templates/course_directory_search.html
@@ -19,6 +19,9 @@
         <option value="Computer Science">Computer Science</option>
         <option value="English">English</option>
         <option value="Biology">Biology</option>
+        <option value="Mathematics">Mathematics</option>
+        <option value="Physics">Physics</option>
+        <option value="Art">Art</option>
     </select>
     </div>
     
