--- a/templates/submit_rating.html
+++ b/templates/submit_rating.html
@@ -8,26 +8,27 @@
 
 {% block body %}
 <h1>Submit a Rating</h1>
+
+{% if courses|length == 0 %}
+
+<h2>Unfortunately, there are no courses to rate yet. Check back later!</h2>
+
+{% else %}
+
 <div class="flex-container">
     <div class="form-container">
         <form id="rating-form" action="/submit_rating" method="post">
             <table>
                 <tr>
                     <td>
-                        <label for="course-letter" class="me-2">Course Code:</label>
+                        <label for="course-letter" class="me-2">Course:</label>
                     </td>
                     <td>
-                        <div class="input-container course-code-container">
-                            <select class="form-select" id="course-letter" name="course-letter">
-                                <option value="ITSC">ITSC</option>
-                                <option value="ITCS">ITCS</option>
-                                <option value="MATH">MATH</option>
-                                <option value="STAT">STAT</option>
-                            </select>
-                            <span>-</span>
-                            <!-- maybe take list of possible numbers from selected course letter -->
-                            <select class="form-select" id="course-number" name="course-letter">
-                                <option value="9999">9999</option>
+                        <div class="input-container course-container">
+                            <select class="form-select" id="course" name="course" required>
+                                {% for course in courses %}
+                                <option value="{{course.course_id}}">{{course.course_letter}} {{course.course_number}} - {{course.title}}</option>
+                                {% endfor %}
                             </select>
                         </div>
                     </td>
@@ -39,13 +40,7 @@
                     </td>
                     <td>
                         <div class="input-container single-input-container">
-                            <select class="form-select" id="instructor" name="instructor">
-                                <option value="A">A</option>
-                                <option value="B">B</option>
-                                <option value="C">C</option>
-                                <option value="D">D</option>
-                                <option value="D">F</option>
-                            </select>
+                            <input class="form-control" id="instructor" name="instructor" required>
                         </div>
                     </td>
                 </tr>
@@ -56,7 +51,7 @@
                     </td>
                     <td>
                         <div class="input-container single-input-container">
-                            <input class="form-control" type="number" id="quality" name="quality">
+                            <input class="form-control" type="number" id="quality" name="quality" min=0 max=5 required>
                         </div>
                     </td>
                 </tr>
@@ -67,7 +62,7 @@
                     </td>
                     <td>
                         <div class="input-container single-input-container">
-                            <input class="form-control" type="number" id="difficulty" name="difficulty">
+                            <input class="form-control" type="number" id="difficulty" name="difficulty" min=0 max=5 required>
                         </div>
                     </td>
                 </tr>
@@ -131,4 +126,6 @@
 
 </div>
 <input type="submit" id="submit-btn" form="rating-form" class="btn btn-success mt-3" value="Submit">
+
+{% endif %}
 {% endblock %}
